// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkDismissibleChip should render correctly 1`] = `
<View
  accessibilityLabel="Dismiss"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(230, 228, 235)",
          "borderRadius": 4,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 20,
          "paddingHorizontal": 8,
        },
        Object {
          "minHeight": 28,
        },
      ],
      null,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0,
        },
        Object {},
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "includeFontPadding": false,
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "color": "rgb(129, 123, 143)",
          "includeFontPadding": false,
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(37, 32, 51)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 4,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkDismissibleChip should render correctly with arbitrary props 1`] = `
<View
  accessibilityLabel="Dismiss"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(230, 228, 235)",
          "borderRadius": 4,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 20,
          "paddingHorizontal": 8,
        },
        Object {
          "minHeight": 28,
        },
      ],
      null,
    ]
  }
  testID="123"
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0,
        },
        Object {},
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "includeFontPadding": false,
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "color": "rgb(129, 123, 143)",
          "includeFontPadding": false,
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(37, 32, 51)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 4,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkDismissibleChip should render correctly with custom style 1`] = `
<View
  accessibilityLabel="Dismiss"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(230, 228, 235)",
          "borderRadius": 4,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 20,
          "paddingHorizontal": 8,
        },
        Object {
          "minHeight": 28,
        },
      ],
      Object {
        "flex": 1,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0,
        },
        Object {},
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "includeFontPadding": false,
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "color": "rgb(129, 123, 143)",
          "includeFontPadding": false,
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(37, 32, 51)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 4,
        },
      ]
    }
  />
</View>
`;
